--- a/index.html
+++ b/index.html
@@ -3,43 +3,81 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DealGuide AI Chatbot</title>
+  <title>DealGuide AI</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    #chatbox { border: 1px solid #ccc; padding: 10px; height: 400px; overflow-y: scroll; }
-    #userInput { width: 80%; padding: 10px; }
-    #sendBtn { padding: 10px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f4;
+    }
+    h1 {
+      color: #333;
+    }
+    #chatbox {
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .message {
+      padding: 10px;
+      margin: 10px 0;
+    }
+    .user {
+      text-align: right;
+      color: blue;
+    }
+    .bot {
+      text-align: left;
+      color: green;
+    }
+    input, button {
+      padding: 10px;
+      font-size: 16px;
+    }
+    input {
+      width: 70%;
+    }
+    button {
+      width: 25%;
+    }
   </style>
 </head>
 <body>
-  <h1>Welcome to DealGuide AI 🤖</h1>
-  <div id="chatbox"></div>
-  <input type="text" id="userInput" placeholder="Ask me anything..." />
-  <button id="sendBtn">Send</button>
+  <div id="chatbox">
+    <h1>Welcome to DealGuide AI Chatbot</h1>
+    <div id="messages"></div>
+    <input type="text" id="user-input" placeholder="Type your message here..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
 
   <script>
-    const chatbox = document.getElementById('chatbox');
-    const userInput = document.getElementById('userInput');
-    const sendBtn = document.getElementById('sendBtn');
+    const messagesDiv = document.getElementById('messages');
 
-    function appendMessage(sender, text) {
-      const msg = document.createElement('div');
-      msg.innerHTML = `<strong>${sender}:</strong> ${text}`;
-      chatbox.appendChild(msg);
-      chatbox.scrollTop = chatbox.scrollHeight;
+    function appendMessage(text, sender) {
+      const message = document.createElement('div');
+      message.className = 'message ' + sender;
+      message.textContent = text;
+      messagesDiv.appendChild(message);
     }
 
-    sendBtn.onclick = () => {
-      const userText = userInput.value.trim();
-      if (userText === "") return;
-      appendMessage("You", userText);
-      userInput.value = "";
-      
-      // Simulated bot reply
+    function sendMessage() {
+      const input = document.getElementById('user-input');
+      const text = input.value;
+      if (!text) return;
+      appendMessage(text, 'user');
+      input.value = '';
+
+      // Simulate a bot response
       setTimeout(() => {
-        appendMessage("DealGuide AI", "Thanks for your message! I’ll help you out shortly.");
-      }, 1000);
-    };
+        appendMessage("You said: " + text, 'bot');
+      }, 500);
+    }
   </script>
 </body>
 </html>
+
