--- a/index.html
+++ b/index.html
@@ -2,82 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DealGuide AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DealGuide AI Chatbot</title>
   <style>
     body {
+      background-color: #f9f9f9;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f4f4f4;
+      text-align: center;
+      padding: 40px;
     }
+
     h1 {
-      color: #333;
+      color: #0a2540;
     }
-    #chatbox {
+
+    iframe {
       width: 100%;
-      max-width: 600px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .message {
-      padding: 10px;
-      margin: 10px 0;
-    }
-    .user {
-      text-align: right;
-      color: blue;
-    }
-    .bot {
-      text-align: left;
-      color: green;
-    }
-    input, button {
-      padding: 10px;
-      font-size: 16px;
-    }
-    input {
-      width: 70%;
-    }
-    button {
-      width: 25%;
+      height: 600px;
+      border: none;
+      margin-top: 20px;
+      max-width: 800px;
     }
   </style>
 </head>
 <body>
-  <div id="chatbox">
-    <h1>Welcome to DealGuide AI Chatbot</h1>
-    <div id="messages"></div>
-    <input type="text" id="user-input" placeholder="Type your message here..." />
-    <button onclick="sendMessage()">Send</button>
-  </div>
+  <h1>Welcome to DealGuide AI</h1>
+  <p>Your smart assistant to help close more deals 💼✨</p>
 
-  <script>
-    const messagesDiv = document.getElementById('messages');
-
-    function appendMessage(text, sender) {
-      const message = document.createElement('div');
-      message.className = 'message ' + sender;
-      message.textContent = text;
-      messagesDiv.appendChild(message);
-    }
-
-    function sendMessage() {
-      const input = document.getElementById('user-input');
-      const text = input.value;
-      if (!text) return;
-      appendMessage(text, 'user');
-      input.value = '';
-
-      // Simulate a bot response
-      setTimeout(() => {
-        appendMessage("You said: " + text, 'bot');
-      }, 500);
-    }
-  </script>
+  <!-- Replace this URL with your actual chatbot embed if different -->
+  <iframe
+    src="https://www.chatbase.co/chatbot-iframe/2FusK0PsnQ7NzZTZJX-3z"
+    title="DealGuide AI Chatbot"
+  ></iframe>
 </body>
 </html>
+
 
