--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to DealGuide AI</h1>
+  <h1>Welcome to DealGuide AI</h1> ( <!-- force rebuild --> )
   <p>Your smart assistant to help close more deals 💼✨</p>
 
   <!-- Replace this URL with your actual chatbot embed if different -->
